--- a/_includes/nav-items.html
+++ b/_includes/nav-items.html
@@ -1,6 +1,6 @@
 <div class="nav-items">
-  {% assign nav_pages = include.paths | where_exp: "page", "page.nav_exclude != true" %}
-  {% for page in nav_pages %}
-    <a href="{{ page.url }}">{{ page.title }}</a>
-  {% endfor %}
+  {% assign nav_pages = site.pages | where_exp: "page", "page.nav_exclude != true" %}
+{% for page in nav_pages %}
+  <a href="{{ page.url }}">{{ page.title }}</a>
+{% endfor %}
 </div>
