--- a/_includes/nav-items.html
+++ b/_includes/nav-items.html
@@ -1,6 +1,8 @@
 <div class="nav-items">
-  {% assign nav_pages = site.pages | where_exp: "page", "page.nav_exclude != true" %}
-{% for page in nav_pages %}
-  <a href="{{ page.url }}">{{ page.title }}</a>
-{% endfor %}
+  {%- for path in include.paths -%}
+    {%- assign hyperpage = site.pages | where: "path", path | first -%}
+    {%- if hyperpage.title and hyperpage.nav_exclude != true %}
+      <a class="nav-item" href="{{ hyperpage.url | relative_url }}">{{ hyperpage.title | escape }}</a>
+    {%- endif -%}
+  {%- endfor %}
 </div>
