Minor formatting changes, _data folder now in service by .ipynb

--- a/_sass/minima/initialize.scss
+++ b/_sass/minima/initialize.scss
@@ -19,8 +19,8 @@ $content-width:    800px !default;
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
 
-$on-medium:        $on-palm !default;
-$on-large:         $on-laptop !default;
+$on-medium:        1000px !default;
+$on-large:         1200px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
